<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back" >

    <LinearLayout
        android:id="@+id/layoutdentro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/editar_datos"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/nombremail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/Correo" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" >
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/nombreclave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/Clave" />

        <EditText
            android:id="@+id/clave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/nombrenombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/Nombres" />

        <EditText
            android:id="@+id/nombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/nombreapellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/Apellidos" />

        <EditText
            android:id="@+id/apellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/cedula" />

        <EditText
            android:id="@+id/cedula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/nombresexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/Sexo" />

        <RadioGroup
            android:id="@+id/sexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <RadioButton
                android:id="@+id/masculino"
                android:text="@string/Masculino" />

            <RadioButton
                android:id="@+id/femenino"
                android:text="@string/Femenino" />

            <RadioButton
                android:id="@+id/otros"
                android:text="@string/Otros" 
                android:layout_marginTop="5dp"/>

          
        </RadioGroup>
        
        <TextView
            android:id="@+id/nombrenumtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/Numero_TP" />

        <EditText
            android:id="@+id/numtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
        
        <TextView
            android:id="@+id/nombrenacionalidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/Nacionalidad" />

        <EditText
            android:id="@+id/nacionalidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
        
         <TextView
             android:id="@+id/nombrespecialidad"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:text="@string/Especialidad" />

        <EditText
            android:id="@+id/especialidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
        
          <TextView
              android:id="@+id/nombredireccion"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/activity_vertical_margin"
              android:text="@string/Direccion" />

        <EditText
            android:id="@+id/direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
        
          <TextView
              android:id="@+id/nombretelefono"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/activity_vertical_margin"
              android:text="@string/Telefono" />

        <EditText
            android:id="@+id/telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/departamentos" />

        <Spinner
            android:id="@+id/departamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/municipios" />

        <Spinner
            android:id="@+id/municipio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="#5c89c7"
            android:text="@string/btn_editar_datos"
            android:textColor="#fff"
            android:textStyle="bold" />
        
    </LinearLayout>

</ScrollView>