<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DatosPacienteActivity" >

    <TextView
        android:id="@+id/tvNombres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvNombres"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvSexo"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnDiagnostico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvTelefono"
        android:layout_marginTop="24dp"
        android:background="#5c89c7"
        android:text="@string/boton_paciente_diagnostico"
        android:textColor="#fff"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnEstadisticas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnDiagnostico"
        android:layout_marginTop="16dp"
        android:text="@string/boton_paciente_Estadisticas"
        android:background="#5c89c7"
        android:textColor="#fff"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnHistorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnEstadisticas"
        android:layout_marginTop="16dp"
        android:text="@string/boton_paciente_historial"
        android:background="#5c89c7"
        android:textColor="#fff"
        android:textStyle="bold" />

</RelativeLayout>
